--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,28 +1,52 @@
-<div class="container w-75">
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= f.error_notification %>
-    <div class="form-inputs">
-      <%= f.input :email, required: true, autofocus: true %>
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-      <% end %>
-      <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-      <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-      <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
+<div class="form container w-75">
+  <div class="title d-flex justify-content-center my-5">
+    <h1>Edit</h1>
+  </div>
+  <div class='partial-form'>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.error_notification %>
+      <div class="form-inputs">
+        <%= f.input :email,
                 required: true,
-                input_html: { autocomplete: "current-password" } %>
-    </div>
-    <div class="form-actions">
-      <%= f.button :submit, "Update" %>
-    </div>
-  <% end %>
+                autofocus: true,
+                input_html: { autocomplete: "email" }%>
+        <%= f.input :password,
+                required: true,
+                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                required: true,
+                input_html: { autocomplete: "new-password" } %>
+        <%= f.input :firstname,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "firstname" }%>
+        <%= f.input :lastname,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "lastname" }%>
+        <%= f.input :team,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "team" }%>
+        <%= f.input :avatar,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "avatar" }%>
+        <%= f.input :phone_number,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "phone_number" }%>
+        <%= f.input :seller_address,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "seller_address" }%>
+      </div>
+      <div class="form-actions">
+        <%= f.button :submit, "Update", class: "btn-submit px-5" %>
+      </div>
+    <% end %>
+  </div>
   <h3>Cancel my account</h3>
   <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
   <%= link_to "Back", :back %>
