--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,22 +3,43 @@
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: rgba(17, 25, 40, 0.25);;
-  color:#34f32e;
   border-radius: 25% 10%;
   border: 4px solid #34f32e;
+  list-style: none !important;
+  opacity:0.8;
+  margin-bottom: 36px;
 
-  a {
-    color:#34f32e;
-
-  }
-
-  .navbar-nav {
-    color: white !important;
-  }
+  // .navbar-nav {
+  //   color: white !important;
+  // }
 
   .navbar-avatar {
     height: 40px;
     width: 40px;
     border-radius: 50%;
+  }
+
+}
+
+#navbarNavDropdown {
+  ul {
+    list-style: none;
+  }
+  a {
+    color:#34f32e;
+    opacity:0,8;
+  }
+  a:hover {
+    opacity:1;
+    color:#34f32e;
+  }
+}
+
+.navbar-brand {
+    color:#34f32e;
+    opacity:0,8;
+  &:hover {
+    opacity:1;
+    color:#34f32e;
   }
 }
