page erreur recherche

--- a/app/views/jerseys/no_results.html.erb
+++ b/app/views/jerseys/no_results.html.erb
@@ -1,7 +1,5 @@
 <div class="container mt-3"  >
-  <h1>NO JERSEYS ARE MATCHING</h1>
+  <h1>NO JERSEYS MATCHING... THINK BETTER !!!</h1>
   <%= render 'jerseys/search'%>
-  <div class="container card">
-    <h2>No results !!!!!!!!!!!!!!!!!!!!!!</h2>
-  </div>
+
 </div>
