--- a/app/views/jerseys/show.html.erb
+++ b/app/views/jerseys/show.html.erb
@@ -92,10 +92,10 @@
         </div>
       </div>
     </div>
-    <div style="width: 100%; height: 600px;"
-      data-controller="map"
-      data-map-marker-value="<%= @marker.to_json %>"
-      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-    </div>
+  </div>
+  <div class="map-show" style="width: 100%; height: 600px;"
+  data-controller="map"
+  data-map-marker-value="<%= @marker.to_json %>"
+  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
   </div>
 </div>
