--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
         <% else %>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <%= link_to "My Shop", jerseys_path, class:"nav-link" %>
+            <%= link_to "My Shop", shop_path, class:"nav-link" %>
           </li>
 
           <li class="nav-item">
